# multi_dof_kinematic_calibration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.txt  visualize_results.py
include/multi_dof_kinematic_calibration/: Calibrator.h  DebugVis.h
multi_dof_kinematic_calibration/: CMakeLists.txt
multi_dof_kinematic_calibration/include/multi_dof_kinematic_calibration/: CalibrationDataIO.h  CalibrationFrameIO.h  Calibrator.h  CeresUtil.h  DebugVis.h  PtuCalibration.h  PtuCalibrationProject.h  PtuImageCapture.h  cameraUtilities.h
multi_dof_kinematic_calibration/multi_dof_kinematic_calibration/: PtuCalibration.h  PtuImageCapture.h
multi_dof_kinematic_calibration/src/: CalibrationDataIO.cpp  CalibrationFrameIO.cpp  Calibrator.cpp  PtuCalibration.cpp  PtuCalibrationProject.cpp  PtuImageCapture.cpp  main.cpp
ptuCalibration/: CMakeLists.txt
ptuCalibration/ptuCalibration/: PtuCalibration.h  PtuCalibrationProject.h  PtuImageCapture.h
ptuCalibration/src/: PtuCalibration.cpp  PtuCalibrationProject.cpp  PtuImageCapture.cpp  main.cpp
src/: CalibrationDataIO.cpp  Calibrator.cpp
util/: setup.sh
